crates/uitest/fixtures/parser/extern_.snap
---
source: crates/uitest/tests/parser.rs
expression: diags
input_file: fixtures/parser/extern_.fe
---
error[1-0001]: expected `}`, newline, doc comment, doc comment, `unsafe`, `pub`, `const`, `fn`, `where`, `uses` or `->`
  ┌─ extern_.fe:2:33
  │
2 │     pub unsafe fn Foo(x: *usize)
  │                                 ^ expected `}`, newline, doc comment, doc comment, `unsafe`, `pub`, `const`, `fn`, `where`, `uses` or `->`

error[1-0001]: expected name for field
  ┌─ extern_.fe:6:8
  │
6 │     pub unsafe fn foo()
  │        ^ expected identifier

error[1-0001]: function definition requires a body
  ┌─ extern_.fe:6:24
  │
6 │     pub unsafe fn foo()
  │                        ^ expected `{`

error[1-0001]: unexpected syntax while parsing function definition
  ┌─ extern_.fe:7:1
  │
7 │ }
  │ ^ unexpected
